--- a/styles.css
+++ b/styles.css
@@ -60,20 +60,12 @@ main {
   width: 44%;
 }
 
-.down path:nth-child(1) {
+.button-pressed path:nth-child(1) {
   fill: #02799d;
 }
 
-.down path:nth-child(2) {
+.button-pressed path:nth-child(2) {
   fill: #fff;
-}
-
-.up path:nth-child(1) {
-  fill: #e1e1e6;
-}
-
-.up path:nth-child(2) {
-  fill: #323238;
 }
 
 button {
@@ -81,6 +73,13 @@ button {
   background: none;
   cursor: pointer;
 }
+
+.sound-selector button:hover {
+  filter: brightness(0.9);
+}
+
+.controls button:hover {
+  filter: drop-shadow(0px 0px 1px #323238);}
 
 @media (min-width: 600px) {
   .timer {
