--- a/styles.css
+++ b/styles.css
@@ -26,9 +26,31 @@ main {
   justify-content: center;
   text-align: center;
   min-height: 100vh;
+  padding-top: 10vh;
   gap: 5rem;
   width: clamp(30rem, 100vw, 150rem);
   margin: auto;
+}
+
+.theme-selector,
+.alarm {
+  text-align: right;
+  margin: 0;
+  padding: 0;
+  height: 0px;
+}
+
+.theme-selector {
+  position: relative;
+  top: 5vh;
+  right: calc(8vw - 36px);
+  max-width: calc(100vw - 36px);
+}
+
+.alarm {
+  position: absolute;
+  top: 36px;
+  left: 36px;
 }
 
 .timer {
@@ -59,9 +81,7 @@ main {
 .sound-selector button {
   display: flex;
   min-width: 13.8rem;
-  /* max-width: 13.8rem; */
   min-height: 15.2rem;
-  /* max-height: 15.2rem; */
   border-radius: 2rem;
   flex-direction: column;
   background-color: #e1e1e6;
@@ -133,30 +153,23 @@ button {
   cursor: pointer;
 }
 
-.theme-selector {
-  position: absolute;
-  top: 6.4rem;
-  right: 6.4rem;
-}
-
-.alarm {
-  position: absolute;
-  bottom: 6.4rem;
-  right: 6.4rem;
-}
-
 .alarm .soundbars {
   position: absolute;
   transform: translate(-24px, -58px) rotate(270deg);
 }
 
 .controls button:hover,
-.light-theme:hover {
+.light-theme:hover,
+.alarm:hover {
   filter: drop-shadow(0px 0px 1px #323238);
 }
 
 .dark-theme:hover {
   filter: drop-shadow(0px 0px 1px #fff);
+}
+
+.controls .dark-mode:hover {
+  filter: drop-shadow(0px 0px 2px #fff);
 }
 
 .dark-mode-background {
@@ -196,7 +209,77 @@ button {
   fill: #fff;
 }
 
+.alarm .dark-mode-alarm-hover:hover {
+  filter: drop-shadow(0px 0px 2px #fff);
+}
+
+.alarm-alert path {
+  animation: color-change 1.1s infinite;
+}
+
+@keyframes color-change {
+  0% {
+    fill: #323238;
+  }
+  50% {
+    fill: tomato;
+  }
+  100% {
+    fill: #323238;
+  }
+}
+
+.alarm-icon-shake {
+  animation: tilt-n-move-shaking 0.125s infinite;
+}
+
+@keyframes tilt-n-move-shaking {
+  0% {
+    transform: translate(0, 0) rotate(0deg);
+  }
+  25% {
+    transform: translate(6px, 6px) rotate(30deg);
+  }
+  50% {
+    transform: translate(0, 0) rotate(0eg);
+  }
+  75% {
+    transform: translate(-6px, 6px) rotate(-30deg);
+  }
+  100% {
+    transform: translate(0, 0) rotate(0deg);
+  }
+}
+
 @media (min-width: 600px) {
+  main {
+    min-height: 90vh;
+    padding-top: 0;
+  }
+
+  .theme-selector,
+  .alarm {
+    position: relative;
+    text-align: right;
+    margin: 0;
+    padding: 0;
+    height: 5vh;
+  }
+
+  .theme-selector {
+    top: calc(9.4vh);
+    right: calc(5vw - 36px);
+    max-width: calc(100vw - 36px);
+  }
+
+  .alarm {
+    top: auto;
+    left: auto;
+    right: calc(5vw - 48px);
+    bottom: 10.4vh;
+    max-width: calc(100vw - 48px);
+  }
+
   .timer {
     gap: 4.8rem;
   }
@@ -204,11 +287,6 @@ button {
   .timer svg {
     width: 64px;
     height: 64px;
-  }
-
-  .sound-selector svg {
-    width: 167px;
-    height: 184px;
   }
 }
 
@@ -238,10 +316,5 @@ button {
   .timer svg {
     width: 48px;
     height: 48px;
-  }
-
-  .sound-selector svg {
-    width: 138px;
-    height: 152px;
   }
 }
